ieatacid (12/20/09)
-----------------
- Updated version to 5.13.9
- Updated charProfile struct
- New zones added to zones.h
- New races and item codes added (uRit1u2CBBA)

ieatacid (10/26/09)
-----------------
- Updated version to 5.13.8
- Updated opcodes
- Updated spawnIllusionStruct

ieatacid (9/16/09)
-----------------
- Updated version to 5.13.7
- Opcodes updated
- Group invite message code fixed (I hope)

ieatacid (8/24/09)
-----------------
- Updated version to 5.13.6.1
- Fixed buffer overflow in interface.cpp

ieatacid (8/20/09)
-----------------
- Updated version to 5.13.6
- Updated opcodes
- Updated structs
- Updated source code where necessary

ieatacid (6/20/09)
-----------------
- Updated version to 5.13.5
- Updated opcodes (6/12/09)
- Updated structs

ieatacid (5/25/09)
-----------------
- Fixed guild name bug

ieatacid (5/20/09)
-----------------
- Updated version to 5.13.4
- Updated opcodes
- Updated code to handle the now serialized guild list

ieatacid (3/20/09)
-----------------
- Updated version to 5.13.3
- Updated opcodes for 3/19 patch

ieatacid (3/15/09)
-----------------
- Updated version to 5.13.2
- Updated charProfile and playerFrofile structs for compatibility with live 3/12

ieatacid (2/15/09)
-----------------
- Updated version to 5.13.1
- Updated opcodes

purple (1/25/09)
---------------
- Fixed some parameter naming things that cause problems with gcc 4.3 (thanks,
Tanner)

ieatacid (1/20/09)
-----------------
- Updated version to 5.13.0
- Opcode updates from December
- Added instance location marker.  Right-click map -> Show -> Instance Location Marker
- Added option to filter client/server packets in the zone log file

purple (11/21/08)
-----------------
- Fixed acincludes test for QT to use modern headers so we don't require
  compat libs

ieatacid (10/23/08)
----------------
- Updated version to 5.12.7.0
- Compatibility with live 10/21
- Updated opcodes